--- a/games/jenga/index.html
+++ b/games/jenga/index.html
@@ -16,7 +16,7 @@
 	'use strict';
 	
 	Physijs.scripts.worker = './js/physijs_worker.js';
-	Physijs.scripts.ammo = './js/ammo.js';
+	Physijs.scripts.ammo = './ammo.js';
 	
 	var initScene, initEventHandling, render, createTower, loader,
 		renderer, render_stats, physics_stats, scene, dir_light, am_light, camera,
