--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<html>
+          <head>
+  <title>Aqua Games</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+  <link rel="icon" type="image/x-icon" href="https://aquagxmes.github.io/img/aqua.ico">
+  <link rel="stylesheet" href="/css/aqua.css">
+  <link rel="stylesheet" href="/css/master.css.map">
+</head>
 <body>
 
 <ul>
@@ -41,3 +49,4 @@
 
 
 </body>
+</html>
