--- a/pages/extra.html
+++ b/pages/extra.html
@@ -14,7 +14,7 @@
   <li><a href="https://aquagxmes.github.io" class="active">Home</a></li>
 <li style="float: left;"><a href="https://aquagxmes.github.io" style="left: 10px;border-radius: 50px; height: 45px;"><img src="/img/logo.png" height="50px"></a></li>  
 </ul>
-<h6 id="OrgTitleName">Aqua Games</h6>
+<h6 id="OrgTitleName">Aqua Games - Extra</h6>
 <div id="settings" style="text-align: center; display: none;">   
     <h1 class="SettingsTitle">Settings</h1>
         <input type="text" id="CloakForm" style="text-align: center;">
