--- a/pages/news.html
+++ b/pages/news.html
@@ -9,21 +9,13 @@
 </head>
 <body>
 <ul>
+<li><a href="/pages/extra.html">Extra</a></li>
+          <li><a href="/pages/news.html" class="active">News</a></li><li><a href="/pages/games.html">Games</a></li>
   <li><a href="https://aquagxmes.github.io">Home</a></li>
-  <li><a href="/pages/games.html">Games</a></li>
-  <li><a class="active" href="/pages/news.html">News</a></li>
-  <li><a href="/pages/extra.html">Extra</a></li>
-  <li style="float: right;">
-    <a class="active" onclick="toggleSettings()">
-        <img id="settingToggle" src="/img/setting.png">
-    </a>
-</li>
+<li style="float: left;"><a href="https://aquagxmes.github.io" style="left: 10px;border-radius: 50px; height: 45px;"><img src="/img/logo.png" height="50px"></a></li>  
 </ul>
 <h6 id="OrgTitleName">Aqua Games - News</h6>
-<div id="settings" style="text-align: center; display: none;">
-    <a style="float: right;" onclick='doc.getElementById("settings").style.display="none"'>
-    <img src="/img/close.png" style="width: 50px;"></a>
-    
+<div id="settings" style="text-align: center; display: none;">   
     <h1 class="SettingsTitle">Settings</h1>
         <input type="text" id="CloakForm" style="text-align: center;">
 <br>
