--- a/pages/games.html
+++ b/pages/games.html
@@ -11,7 +11,7 @@
 <body>
 <ul>
 <li><a href="/pages/extra.html">Extra</a></li>
-          <li><a class="active" href="/pages/news.html">News</a></li><li><a href="/pages/games.html">Games</a></li>
+          <li><a href="/pages/news.html">News</a></li><li><a class="active" href="/pages/games.html">Games</a></li>
   <li><a href="https://aquagxmes.github.io">Home</a></li>
 <li style="float: left;"><a href="https://aquagxmes.github.io" style="left: 10px;border-radius: 50px; height: 45px;"><img src="/img/logo.png" height="50px"></a></li>  
 </ul>
