--- a/pages/extra.html
+++ b/pages/extra.html
@@ -11,7 +11,7 @@
 <ul>
 <li><a class="active" href="/pages/extra.html">Extra</a></li>
           <li><a href="/pages/news.html">News</a></li><li><a href="/pages/games.html">Games</a></li>
-  <li><a href="https://aquagxmes.github.io" class="active">Home</a></li>
+  <li><a href="https://aquagxmes.github.io">Home</a></li>
 <li style="float: left;"><a href="https://aquagxmes.github.io" style="left: 10px;border-radius: 50px; height: 45px;"><img src="/img/logo.png" height="50px"></a></li>  
 </ul>
 <h6 id="OrgTitleName">Aqua Games - Extra</h6>
