--- a/pages/extra.html
+++ b/pages/extra.html
@@ -27,7 +27,10 @@
   <div class="container">
   <h1 class="aqua">Extra</h1>
   <h2 class="aquasentence">Leftover things, extra, and other stuff.</h2>
-
+   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSePOivftY8zfWT5Xh1Qv5sRsazmrO6s-UsTSPDkE3VL3p7O7g/viewform?embedded=true" width="640" height="772" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeH4aGFGWem1-FqeHGxqjlbTJxFMFdPBhkXqDR5SVGdpzcplQ/viewform?embedded=true" width="640" height="772" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<a onclick="toggleSettings()">
+        <img id="settingToggle" src="/img/setting.png">
     </a>
   </div>
  <div id="particles-js"></div>
