--- a/pages/games.html
+++ b/pages/games.html
@@ -115,6 +115,9 @@
       </a>
       
     </div>
+  <a onclick="toggleSettings()">
+        <img id="settingToggle" src="/img/setting.png">
+    </a>
   </div>
  <div id="particles-js"></div>
  <script src="/js/particles.js"></script>
