--- a/pages/news.html
+++ b/pages/news.html
@@ -33,6 +33,8 @@
   <h1 class="newstxt">Wallpaper Method</h1>
   <h2 class="newstxt">How to change your wallpaper even if the option is disabled.</h2>
   </div>
+<a onclick="toggleSettings()">
+        <img id="settingToggle" src="/img/setting.png">
     </a>
   </div>
  <div id="particles-js"></div>
