--- a/gpages/game.html
+++ b/gpages/game.html
@@ -10,20 +10,13 @@
 </head>
 <body>
 <ul>
-  <li><a href="/index.html">Home</a></li>
-  <li><a class="active" href="/pages/games.html">Games</a></li>
-  <li><a href="/pages/news.html">News</a></li>
-<li><a href="/pages/extra.html">Extra</a></li>
-  <li style="float: right;">
-    <a class="active" onclick="toggleSettings()">
-        <img id="settingToggle" src="/img/setting.png">
-    </a>
-</li>
+<li><a  href="/pages/extra.html">Extra</a></li>
+          <li><a href="/pages/news.html">News</a></li><li><a class="active" href="/pages/games.html">Games</a></li>
+  <li><a href="https://aquagxmes.github.io">Home</a></li>
+<li style="float: left;"><a href="https://aquagxmes.github.io" style="left: 10px;border-radius: 50px; height: 45px;"><img src="/img/logo.png" height="50px"></a></li>  
 </ul>
 <h6 id="OrgTitleName"></h6>
-<div id="settings" style="text-align: center; display: none;">
-    <input src="/img/close.png" style="width: 50px; float: right;" type="image" onclick='doc.getElementById("settings").style.display="none"'>
-    
+<div id="settings" style="text-align: center; display: none;">   
     <h1 class="SettingsTitle">Settings</h1>
         <input type="text" id="CloakForm" style="text-align: center;">
 <br>
@@ -31,8 +24,7 @@
     <button class="CloakInput" onclick="TitleSetting(doc.getElementById('CloakForm').value)">Title Cloak</button>
     <button class="CloakInput" onclick="IconSetting(doc.getElementById('CloakForm').value)">Icon Cloak</button>
     <button class="CloakInput" onclick="DefaultSetting()">Default</button>
-</div>
-</div>
+</div></div>
   <div class="container">
 <iframe class="gmeifram" id="aquagame" width="800" height="450" src="" scrolling="yes" frameborder="1" align="center"></iframe>
 <div class="bottom-info">
