--- a/gpages/game.html
+++ b/gpages/game.html
@@ -31,7 +31,7 @@
   <h1 id="GmeTitle"></h1>
   <h3 id="GmeAuthor" style="right:133px;"></h3>
   <input id="fullscreen" type="image" src="/img/fullscreen.png" onclick="openFullscreen('aquagame')">
-  <input id="refresh" type="image" src="/img/refresh.png" onclick="changeMethod(localStorage.getItem('gamelink'))">
+  <input id="refresh" type="image" src="/img/refresh.png" onclick="refreshGame()">
   </div>
   </div>
  <div id="particles-js"></div>
